--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -70,3 +70,12 @@
     display: flex;
     justify-content: center;
 }
+
+.schema-svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1000;
+}
