--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -66,6 +66,10 @@
     border-radius: 0.2rem;
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
     cursor: grab;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .task-manager__block:active {
