--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -212,3 +212,38 @@
     transform: scale(1.2); /* Увеличение кнопки при наведении */
     color: #ff4d4d; /* Красный цвет при наведении */
 }
+
+.aside__block {
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 1.2rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+    border: 1px solid #eaeaea;
+}
+
+.aside__block-title {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.aside__toggle-icon {
+    font-size: 1.2rem;
+    transition: transform 0.3s ease;
+}
+
+.aside__toggle-icon.open {
+    transform: rotate(180deg); /* Переворачиваем стрелочку */
+}
+
+.aside__block-props {
+    font-size: 1.3rem;
+    line-height: 1.6;
+    color: #555;
+    text-align: left;
+    margin-top: 0.5rem;
+}
