--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Inter", "Roboto", "Arial", sans-serif;
+}
+
 button {
     margin: 0.5rem;
     padding: 1rem;
@@ -6,3 +10,5 @@ button {
     cursor: pointer;
     text-align: center;
 }
+
+
