--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -288,3 +288,73 @@
     width: 80%;
     box-sizing: border-box;
 }
+
+.aide__block-file {
+    display: flex;
+    justify-content: space-between;
+}
+
+.aside__block-file-download {
+    margin: 0;
+}
+
+/* Блок с файлом */
+.aside__block-file {
+    background-color: #f9f9f9; /* Светлый фон для блока */
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0;
+}
+
+/* Заголовок файла */
+.aside__block-file-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: #333; /* Темный цвет для текста */
+    margin: 0.8rem 0;
+    flex-grow: 1;
+    padding-right: 20px;
+}
+
+/* Кнопка загрузки файла */
+.aside__block-file-download {
+    background-color: #4CAF50; /* Зеленый фон для кнопки */
+    border: none;
+    border-radius: 50%; /* Круглая форма */
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+    margin: 0.2rem 0;
+}
+
+/* Иконка внутри кнопки */
+.aside__block-file-download-icon {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    fill: white;
+}
+
+/* Эффект при наведении на кнопку */
+.aside__block-file-download:hover {
+    background-color: #45a049; /* Немного темнее зеленый при наведении */
+    transform: scale(1.1); /* Увеличение размера при наведении */
+}
+
+/* Эффект фокуса */
+.aside__block-file-download:focus {
+    outline: none;
+}
+
+/* Эффект для заголовка */
+.aside__block-file-title:hover {
+    color: #45a049; /* Цвет текста меняется при наведении */
+    cursor: pointer;
+}
