--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -364,6 +364,7 @@
     word-wrap: break-word;
     resize: none;
     outline: none;
+    font-size: 1.2rem;
 }
 
 .props-input::-moz-focus-inner {
