--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -384,13 +384,13 @@
     top: 0;
     right: 0;
     display: flex;
-    flex-direction: row-reverse;
-    margin-right: 4%;
+    justify-content: space-between;
+    margin: 3%;
 }
 
 .block__icon {
-    width: 17%;
-    height: 17%;
+    width: 20%;
+    height: 20%;
     cursor: pointer;
     z-index: 10;
 }
