--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -395,3 +395,11 @@
     cursor: pointer;
     z-index: 10;
 }
+
+.block--select {
+    position: absolute;
+    border: 2px dashed blue;
+    pointer-events: none;
+    background-color: rgba(3, 162, 255, 0.171);
+    /* background-color: rgb(3, 184, 255); */
+}
