--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -106,7 +106,7 @@
     border-radius: 4px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: absolute;
-    z-index: 1000;
+    z-index: 100;
     width: 150px;
 }
 
@@ -402,4 +402,14 @@
     pointer-events: none;
     background-color: rgba(3, 162, 255, 0.171);
     /* background-color: rgb(3, 184, 255); */
+}
+
+.time-under-cursor {
+    position: absolute;
+    padding: 0.2rem 0.4rem;
+    border-radius: 4px;
+    pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    z-index: 50;
 }
