--- a/src/components/TaskManager/Settings/Settings.css
+++ b/src/components/TaskManager/Settings/Settings.css
@@ -25,24 +25,28 @@
 .settings-menu {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
 }
 
 .settings-menu__title {
-    font-size: 18px;
+    font-size: 1.5rem;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .settings-menu__label {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 16px;
+    font-size: 1.05rem;
 }
 
 .settings-menu__select {
-    padding: 5px;
-    font-size: 16px;
+    padding: 0.2rem;
+    font-size: 1.05rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+    margin-left: 1rem;
+    cursor: pointer;
 }
