--- a/src/components/TaskManager/TaskManager.css
+++ b/src/components/TaskManager/TaskManager.css
@@ -14,7 +14,7 @@
     height: 100%;
     background-image: linear-gradient(to right, #ddd 0.1rem, transparent 0.1rem),
                       linear-gradient(to bottom, #ddd 0.1rem, transparent 0.1rem);
-    background-size: 5rem 5rem;
+    /* background-size: 5rem 5rem; */
     cursor: grab;
     /* Фиксируем фон, чтобы не было ошибок с его масштабированием */
     will-change: transform;
